// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb Default Breadcrumb 1`] = `
.c5 {
  color: rgba(73,73,73,1);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
  font-weight: normal;
  margin: 0.75rem 0;
}

.c5 + p,
.c5 + small,
.c5 + h1,
.c5 + h2,
.c5 + label,
.c5 + h3,
.c5 + h4,
.c5 + h5,
.c5 + div,
.c5 + span {
  margin-top: 0.75rem;
}

.c6 {
  margin: 0.1875rem 0.625rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4:first-child a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:last-child svg {
  display: none;
}

.c0 {
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
  width: 100%;
  max-width: 62.5rem;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c1 {
  margin-top: 1.5rem;
}

@media only screen and (min-width:48em) {
  .c0 {
    width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c0 {
    width: 56rem;
  }
}

@media only screen and (min-width:75em) {
  .c0 {
    width: 59rem;
  }
}

@media only screen and (max-width:47.9375rem) {
  .c0 {
    padding-left: 0.375rem;
    padding-right: 0.375rem;
  }
}

@media only screen and (min-width:0em) {
  .c3 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      name="breadcrum"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <h4
            className="c5"
            name="breadcrum-item"
          >
            Home
          </h4>
          <svg
            className="c6 "
            height="6"
            innerRef={undefined}
            style={
              Object {
                "transform": "rotate(-90deg)",
              }
            }
            viewBox="0 0 9.6 6"
            width="9.6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
              fill="rgb(151, 151, 151)"
            />
          </svg>
        </div>
        <div
          className="c4"
        >
          <h4
            className="c5"
            name="breadcrum-item"
          >
            Warp Records Blog
          </h4>
          <svg
            className="c6 "
            height="6"
            innerRef={undefined}
            style={
              Object {
                "transform": "rotate(-90deg)",
              }
            }
            viewBox="0 0 9.6 6"
            width="9.6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
              fill="rgb(151, 151, 151)"
            />
          </svg>
        </div>
        <div
          className="c4"
        >
          <h4
            className="c5"
            name="breadcrum-item"
          >
            Services
          </h4>
          <svg
            className="c6 "
            height="6"
            innerRef={undefined}
            style={
              Object {
                "transform": "rotate(-90deg)",
              }
            }
            viewBox="0 0 9.6 6"
            width="9.6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
              fill="rgb(151, 151, 151)"
            />
          </svg>
        </div>
        <div
          className="c4"
        >
          <h4
            className="c5"
            name="breadcrum-item"
          >
            Nginx
          </h4>
          <svg
            className="c6 "
            height="6"
            innerRef={undefined}
            style={
              Object {
                "transform": "rotate(-90deg)",
              }
            }
            viewBox="0 0 9.6 6"
            width="9.6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
              fill="rgb(151, 151, 151)"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb Default Item 1`] = `
.c1 {
  color: rgba(73,73,73,1);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
  font-weight: normal;
  margin: 0.75rem 0;
}

.c1 + p,
.c1 + small,
.c1 + h1,
.c1 + h2,
.c1 + label,
.c1 + h3,
.c1 + h4,
.c1 + h5,
.c1 + div,
.c1 + span {
  margin-top: 0.75rem;
}

.c2 {
  margin: 0.1875rem 0.625rem;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:first-child a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:last-child svg {
  display: none;
}

<div
  className="c0"
>
  <h4
    className="c1"
    name="breadcrum-item"
  >
    Home
  </h4>
  <svg
    className="c2 "
    height="6"
    innerRef={undefined}
    style={
      Object {
        "transform": "rotate(-90deg)",
      }
    }
    viewBox="0 0 9.6 6"
    width="9.6"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
      fill="rgb(151, 151, 151)"
    />
  </svg>
</div>
`;
